main menu update
22/03/25/- 1

--- a/hangman/hangman.cbp
+++ b/hangman/hangman.cbp
@@ -39,6 +39,7 @@
 		<Unit filename="guess.h" />
 		<Unit filename="launch.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="menu.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
