split file update
28/03/25 (ti thi cut, so v)

--- a/hangman/hangman.cbp
+++ b/hangman/hangman.cbp
@@ -32,11 +32,13 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="create.cpp" />
 		<Unit filename="create.h" />
 		<Unit filename="defs.h" />
 		<Unit filename="draw.h" />
 		<Unit filename="graphics.h" />
 		<Unit filename="guess.h" />
+		<Unit filename="launch.cpp" />
 		<Unit filename="launch.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="menu.h" />
